<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pet_profile_box"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="24dp"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="10dp"
    android:background="@drawable/bg_rounded">

    <View
        android:id="@+id/pet_photo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_circle_blue"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_petn"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pet_breed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breed"
                android:textSize="11sp"
                android:textColor="@color/gray"/>

            <TextView
                android:id="@+id/pet_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:text="@string/age"
                android:textSize="11sp"
                android:textColor="@color/gray"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>