<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="16dp"
    android:background="@drawable/bg_rounded">

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:padding="10dp"
        android:background="@drawable/bg_circle_blue"
        android:src="@drawable/ic_extra_bano"
        app:tint="@color/dark_blue" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_message_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_theme"
                android:textSize="13sp"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:fontFamily="@font/kanit" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/forpet"
            android:textSize="11sp"
            android:textColor="@color/gray"
            android:fontFamily="@font/kanit" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:background="@drawable/bg_card_blue"
        android:text="@string/time_date"
        android:textSize="11sp"
        android:textColor="@color/blue"
        android:fontFamily="@font/kanit"
        tools:ignore="RtlHardcoded" />

</LinearLayout>