<?xml version="1.0" encoding="utf-8"?>

<!-- Botón con ícono y texto -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/btn_action"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:background="@drawable/bg_rounded_pink"
    android:backgroundTint="@color/white"
    android:clickable="true"
    android:focusable="true">

    <!-- Ícono del botón -->
    <ImageView
        android:id="@+id/btn_action_icon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:padding="8dp"
        android:background="@drawable/bg_card_blue"
        android:backgroundTint="@color/extra_light_green"
        android:src="@drawable/ic_extra_check" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Texto del botón -->
        <TextView
            android:id="@+id/btn_action_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/procedure_treatment"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/kanit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/procedure_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/time_date"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/kanit" />

            <TextView
                android:id="@+id/doctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/doctor"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/kanit" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>